fixed alignment in project description for reverse rows in mobile

--- a/src/app/projects/project/project.component.scss
+++ b/src/app/projects/project/project.component.scss
@@ -159,7 +159,7 @@ a{
     }
     
     .row-reverse .projectDescription {
-        text-align: center;
+        text-align: left;
     }
     
     
